# injection-alert-system

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  TASKS.md  pyproject.toml  requirements.txt  test.db
.github/workflows/: ci.yml
ansible/: README.md
config/crs/: README.md
config/environments/: README.md  dev.yaml  production.yaml  staging.yaml
config/modsecurity/: README.md
deploy/: README.md
deploy/ssl/: README.md
docs/: BUILD_GUIDE.md  CONTEXT.md  README.md  architecture.md  feasibility_report.md  model_architecture_subsection.md
docs/Audit/: DATASET_AUDIT_REPORT.md  DOCUMENTATION_AUDIT.md  audit_report.md  structural_audit_report.md
docs/checklists/: 01_PROJECT_SETUP.md  02_DATA_PREPARATION.md  03_ML_MODEL.md  04_WEB_APP.md  05_RETRAINING.md  06_MODSECURITY.md  07_ANSIBLE.md  08_TESTING.md  09_DOCUMENTATION.md  PD1_CHECKLIST.md  README.md
frontend/: README.md  migration_checklist.md
migrations/: README.md
ml_model/export/: README.md
ml_model/inference/: README.md
ml_model/models/: mock_model.py
ml_model/preprocessing/: README.md
ml_model/retraining/: README.md
ml_model/training/: README.md
model_registry/: README.md
observability/: README.md
tests/: conftest.py  test_api.py  test_config.py  test_database.py  test_schemas.py
tests/e2e/: README.md  __init__.py
tests/integration/: README.md  __init__.py  test_api.py  test_database.py
tests/unit/: README.md  __init__.py  test_config.py  test_feedback_use_case.py  test_mock_model.py  test_schemas.py  (+1 more)
web_app/: app.py  config.py  database.py  schemas.py
(+19 files in other folders)
